src/objects/Tealium_Request__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tealium Requests</relationshipLabel>
        <relationshipName>Tealium_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Tealium Requests</relationshipLabel>
        <relationshipName>Tealium_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matched_Field__c</fullName>
        <label>Matched Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Order_Id__c</fullName>
        <label>User Order Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Tealium Request</label>
    <listViews>
        <fullName>Today_s_Tealium_Request</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Matched_Field__c</columns>
        <columns>Request_Body__c</columns>
        <columns>User_Order_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>9/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Lead__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Tealium Request</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Request-{00000}</displayFormat>
        <label>Tealium Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tealium Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>